--- a/Panel/admin/add-user.html
+++ b/Panel/admin/add-user.html
@@ -13,7 +13,8 @@
 
         </section>
 
-        <form id="add_user_form" method="GET" class="steps" accept-charset="UTF-8" enctype="multipart/form-data" novalidate="">
+        <form id="add_user_form" method="GET" class="steps" accept-charset="UTF-8" enctype="multipart/form-data"
+            novalidate="">
             <ul id="progressbar">
                 <li class="active">Set a username</li>
                 <li>User Information</li>
@@ -35,7 +36,8 @@
 
                     <label for="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983">User Name? *</label>
 
-                    <input id="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983" name="username" required="required" type="text" value="" placeholder="" data-rule-required="true" data-msg-required="Required">
+                    <input id="firstname-99a6d115-5e68-4355-a7d0-529207feb0b3_2983" name="username" required="required"
+                        type="text" value="" placeholder="" data-rule-required="true" data-msg-required="Required">
                     <input style="display: none;" name="user_id">
                     <span class="error1" style="display: none;">
                         <i class="error-log fa fa-exclamation-triangle"></i>
@@ -56,11 +58,16 @@
                 <h2 class="fs-title">User Information</h2>
                 <h3 class="fs-subtitle">Basic User Information ?</h3>
                 <!-- Begin Total Number of Donors in Year 1 Field -->
-                <div class="form-item webform-component webform-component-textfield hs_total_number_of_donors_in_year_1 field hs-form-field" id="webform-component-acquisition--amount-1">
+                <div class="form-item webform-component webform-component-textfield hs_total_number_of_donors_in_year_1 field hs-form-field"
+                    id="webform-component-acquisition--amount-1">
 
-                    <label for="edit-submitted-acquisition-amount-1 total_number_of_donors_in_year_1-99a6d115-5e68-4355-a7d0-529207feb0b3_6344">Name? *</label>
+                    <label
+                        for="edit-submitted-acquisition-amount-1 total_number_of_donors_in_year_1-99a6d115-5e68-4355-a7d0-529207feb0b3_6344">Name?
+                        *</label>
 
-                    <input id="edit-submitted-acquisition-amount-1" class="form-text hs-input" name="name" required="required" size="60" maxlength="128" type="text" value="" placeholder="" data-rule-required="true" data-msg-required="Required">
+                    <input id="edit-submitted-acquisition-amount-1" class="form-text hs-input" name="name"
+                        required="required" size="60" maxlength="128" type="text" value="" placeholder=""
+                        data-rule-required="true" data-msg-required="Required">
                     <span class="error1" style="display: none;">
                         <i class="error-log fa fa-exclamation-triangle"></i>
                     </span>
@@ -68,11 +75,16 @@
                 <!-- End Total Number of Donors in Year 1 Field -->
 
                 <!-- Begin Total Number of Donors in Year 2 Field -->
-                <div class="form-item webform-component webform-component-textfield hs_total_number_of_donors_in_year_2 field hs-form-field" id="webform-component-acquisition--amount-2">
+                <div class="form-item webform-component webform-component-textfield hs_total_number_of_donors_in_year_2 field hs-form-field"
+                    id="webform-component-acquisition--amount-2">
 
-                    <label for="edit-submitted-acquisition-amount-2 total_number_of_donors_in_year_2-99a6d115-5e68-4355-a7d0-529207feb0b3_6344">Surname? *</label>
+                    <label
+                        for="edit-submitted-acquisition-amount-2 total_number_of_donors_in_year_2-99a6d115-5e68-4355-a7d0-529207feb0b3_6344">Surname?
+                        *</label>
 
-                    <input id="edit-submitted-acquisition-amount-2" class="form-text hs-input" name="surname" required="required" size="60" maxlength="128" type="text" value="" placeholder="" data-rule-required="true" data-msg-required="Required">
+                    <input id="edit-submitted-acquisition-amount-2" class="form-text hs-input" name="surname"
+                        required="required" size="60" maxlength="128" type="text" value="" placeholder=""
+                        data-rule-required="true" data-msg-required="Required">
                     <span class="error1" style="display: none;">
                         <i class="error-log fa fa-exclamation-triangle"></i>
                     </span>
@@ -81,10 +93,14 @@
 
                 <!-- Begin Calc of Total Number of Donors Fields -->
                 <!-- THIS FIELD IS NOT EDITABLE | GRAYED OUT -->
-                <div class="form-item webform-component webform-component-textfield webform-container-inline hs_total_donor_percent_change field hs-form-field">
+                <div
+                    class="form-item webform-component webform-component-textfield webform-container-inline hs_total_donor_percent_change field hs-form-field">
 
-                    <label for="edit-submitted-acquisition-percent-change total_donor_percent_change-99a6d115-5e68-4355-a7d0-529207feb0b3_6344">Phone</label>
-                    <input id="edit-submitted-acquisition-percent-change" class="form-text hs-input" name="phone" required="required" size="60" maxlength="128" type="text" value="" placeholder="" data-rule-required="true" data-msg-required="Required">
+                    <label
+                        for="edit-submitted-acquisition-percent-change total_donor_percent_change-99a6d115-5e68-4355-a7d0-529207feb0b3_6344">Phone</label>
+                    <input id="edit-submitted-acquisition-percent-change" class="form-text hs-input" name="phone"
+                        required="required" size="60" maxlength="128" type="text" value="" placeholder=""
+                        data-rule-required="true" data-msg-required="Required">
 
                 </div>
                 <!-- End Calc of Total Number of Donors Fields -->
@@ -107,14 +123,16 @@
                 <!-- End Average Gift Size Perchent Change Field -->
                 <hr>
                 <input type="button" data-page="3" name="previous" class="previous action-button" value="Previous" />
-                <input id="set_photo_button" disabled type="button" data-page="3" name="next" class="next action-button" value="Next" />
+                <input id="set_photo_button" disableds type="button" data-page="3" name="next"
+                    class="next action-button" value="Next" />
             </fieldset>
 
 
 
             <!-- Cultivation2 FIELD SET -->
             <fieldset>
-                <div class="col-md-12 col-sm-12 col-12 text-center mx-auto" style="text-align: center;/* margin: auto; */">
+                <div class="col-md-12 col-sm-12 col-12 text-center mx-auto"
+                    style="text-align: center;/* margin: auto; */">
                     <div class="card-div info-box bg-danger text-center" style="text-align: center;">
                         <span class="info-box-icon"><i class="fa fa-credit-card"></i></span>
 
@@ -135,14 +153,16 @@
 
                 <!-- End Average Gift Size Percent Change Field 2 -->
                 <input type="button" data-page="4" name="previous" class="previous action-button" value="Previous" />
-                <input id="rfid_card_next" disabled type="button" data-page="4" name="next" class="next action-button" value="Next" />
+                <input id="rfid_card_next" disableds type="button" data-page="4" name="next" class="next action-button"
+                    value="Next" />
             </fieldset>
 
 
 
             <!-- RETENTION FIELD SET -->
             <fieldset>
-                <div class="col-md-12 col-sm-12 col-12 text-center mx-auto" style="text-align: center;/* margin: auto; */">
+                <div class="col-md-12 col-sm-12 col-12 text-center mx-auto"
+                    style="text-align: center;/* margin: auto; */">
                     <div class="finger-div info-box bg-danger text-center" style="text-align: center;">
                         <span class="info-box-icon"><i class="far fa-thumbs-up"></i></span>
 
@@ -166,12 +186,18 @@
 
                 <!-- End Final Calc -->
                 <input type="button" data-page="5" name="previous" class="previous action-button" value="Previous" />
-                <input id="finger_print_button" disabled type="button" data-page="5" name="next" class="next action-button" value="Next" />
+                <input onclick="getEntries()" id="finger_print_button" disableds type="button" data-page="5" name="next"
+                    class="next action-button" value="Next" />
             </fieldset>
 
 
             <fieldset>
                 <h2 class="fs-title">Authorization</h2>
+                <div class="form-group">
+                    <label for="exampleFormControlSelect1">Select Role</label>
+                    <div id="div_roles"></div>
+                </div>
+
 
 
                 <div class="card card-info">
@@ -189,7 +215,8 @@
 
                 <!-- End Final Calc -->
                 <input type="button" data-page="6" name="previous" class="previous action-button" value="Previous" />
-                <input onclick="userAddFormSerialize()" class="hs-button primary large action-button next" type="button" value="Submit">
+                <input onclick="userAddFormSerialize()" class="hs-button primary large action-button next" type="button"
+                    value="Submit">
             </fieldset>
 
             <fieldset>
@@ -199,7 +226,7 @@
             <script src="../dist/js/user-register.js"></script>
 
             <script type="text/javascript">
-                const getLastUserId = async() => {
+                const getLastUserId = async () => {
                     const user_id = await eel.getLastUserId()()
                     $('input[name=user_id]').val(user_id)
 
@@ -207,7 +234,7 @@
 
                 getLastUserId()
 
-                const takePhoto = async() => {
+                const takePhoto = async () => {
                     const userId = $('input[name=user_id]').val()
 
 
@@ -218,19 +245,19 @@
 
                     await eel.startSerialRead()()
                     sendArduino()
-                    getEntries()
+
 
                 }
-                const sendArduino = async() => {
+                const sendArduino = async () => {
                     const userId = $('input[name=user_id]').val()
                     await eel.sendSerialData(userId)()
 
 
                 }
-                const userAddFormSerialize = async() => {
+                const userAddFormSerialize = async () => {
                     const userdata = {}
 
-                    $.each($('#add_user_form').serializeArray(), function(i, obj) {
+                    $.each($('#add_user_form').serializeArray(), function (i, obj) {
                         userdata[obj.name] = obj.value
                     })
 
@@ -272,8 +299,43 @@
                         $('.finger-message').text('Remove and Press Again')
                     }
                 }
+                const getRoles = async () => {
+                    const roles = await eel.getRoles()()
+                    $('#div_roles').append(`<select class="form-control" id="roles"></select>`)
+                    $.each(roles, (key, data) => {
+                        $('#roles').append(`<option value="${data.role}">${data.role}</option>`)
+                    });
 
-                const getEntries = async() => {
+                    $('#roles').change(() => {
+                        const selectedRole = $("#roles")[0].value
+                        console.log("asdsad")
+                        markRoles(roles, selectedRole)
+
+                    })
+                }
+
+
+
+                const markRoles = (roles, selectedRole) => {
+                    $(`input`).prop('checked', false)
+                    $.each(roles, (keyRole, role) => {
+                        if (role.role == selectedRole) {
+                            $.each(role.accessible, (keyAccessible, accessible) => {
+                                $(`input[name="${keyAccessible}"]`).prop('checked', true)
+                                $.each(accessible, (keyVerification, verification) => {
+                                    $.each(verification, (keyVerification, verificationType) => {
+                                        $(`input[name="${keyAccessible}-${verificationType}"]`).prop('checked', true)
+                                    })
+
+                                })
+                            })
+                        }
+                    })
+                }
+
+                const getEntries = async () => {
+                    getRoles()
+
                     const entries = await eel.getEntries()()
                     console.log(entries)
                     $.each(entries, (key, data) => {
